# torchheat

./: README.md  pyproject.toml
src/torchheat/: approx.py  heat_kernel.py
tests/: test_dist.py  test_heat.py
