[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "torchheat"
description = "Diffusion based distances in Torch"
requires-python = ">=3.8"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Guillaume Huguet"}
]
dependencies = [
    "torch",
    "scipy",
    "numpy",
]
keywords = [
    "torch",
    "diffusion",
    "distances",
    "heat",
    "kernel"
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest",
    "isort",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools_scm]

[tool.black]
line-length = 80
target-version = ["py38"]